frontend/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-frontend-service
  namespace: dummy-app
  labels:
    app: dummy-frontend
    component: frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: dummy-frontend
    component: frontend
